# trace_viewer

./: Cargo.toml  README.md  WeirdBitBox_FileDump.trc  pubspec.yaml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/trace_viewer/: MainActivity.kt
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/models/can_trace/: can_message.dart  can_trace.dart
lib/models/can_trace/importer/: base_importer.dart  pcan_importer.dart
lib/pages/: can_message_view.dart  trace_scaffold.dart  trace_view.dart
lib/utils/: byte_data_input_formatter.dart  collection_iterator.dart  db.dart  iterator_extension.dart  nullable_extension.dart  scaffold_messenger_extension.dart  string_extension.dart
lib/widgets/: expansion_tile.dart  sliver_expansion_tile.dart  trace_search.dart
linux/: CMakeLists.txt  my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
src/: can_message_view.rs  drop_area.rs  main.rs  old_drop_area.rs  parser.rs
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
